manifest/objects/Apttus__Wizard__c.object
<CustomObject>
    <description>Main Wizard Object, each record represents a Wizard design</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Wizard Design is Active. Once activated, the wizard cannot be modified.</description>
        <inlineHelpText>Signifies that the Wizard Design is Active. Once activated, the wizard cannot be modified.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BannerStatement__c</fullName>
        <description>Defaults to Wizard Design label and is used by the Wizard Runtime as the banner.</description>
        <inlineHelpText>Defaults to Wizard Design label and is used by the Wizard Runtime as the banner.</inlineHelpText>
        <label>Banner Statement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs and steps</description>
        <inlineHelpText>Business object context, used to filter and align inputs and steps</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object.
All means that any step can be used in the wizard design.
Object means that only aligned (same object) steps can be used in the wizard design.</description>
        <inlineHelpText>Type of context, whether its All or Object.
All means that any step can be used in the wizard design.
Object means that only aligned (same object) steps can be used in the wizard design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</description>
        <inlineHelpText>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EditorView__c</fullName>
        <label>Editor View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step Sequence List</fullName>
                </value>
                <value>
                    <fullName>Step Name</fullName>
                </value>
                <value>
                    <fullName>Input Name</fullName>
                </value>
                <value>
                    <fullName>Input Q / S</fullName>
                </value>
                <value>
                    <fullName>Input Response</fullName>
                </value>
                <value>
                    <fullName>Q / S &amp; Response</fullName>
                </value>
                <value>
                    <fullName>Rule Editors</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Label__c</fullName>
        <description>The label to be used for the wizard.</description>
        <inlineHelpText>The label to be used for the wizard.</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__LandingPage__c</fullName>
        <description>The page that the Wizard should drop off at when all questions are completed. Default will be the record.</description>
        <inlineHelpText>The page that the Wizard should drop off at when all questions are completed. Default will be the record.</inlineHelpText>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Language__c</fullName>
        <description>The language the runtime user speaks.</description>
        <inlineHelpText>The language the runtime user speaks.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Locale__c</fullName>
        <description>APTTUS RESERVED. CUSTOMERS SHOULD NOT CHANGE VALUES</description>
        <inlineHelpText>The locale the wizard runtime user will be in.</inlineHelpText>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (Canada)</fullName>
                </value>
                <value>
                    <fullName>English (Ireland)</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Greek (Greece)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__OwnerEditsOnly__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if everyone or just the owner can edit a wizard design that is not yet activated.</description>
        <inlineHelpText>Controls if everyone or just the owner can edit a wizard design that is not yet activated.</inlineHelpText>
        <label>Owner Edits Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordType__c</fullName>
        <description>Correlates to the Recordtype</description>
        <inlineHelpText>Correlates to the Recordtype</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeDescription__c</fullName>
        <description>Describe what the runtime user can see as a help or instruction description for this wizard design.</description>
        <inlineHelpText>Describe what the runtime user can see as a help or instruction description for this wizard design.</inlineHelpText>
        <label>Runtime Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimePreviewOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Runtime Preview Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Runtime__c</fullName>
        <description>This launches a Wizard runtime instance.</description>
        <formula>HYPERLINK(&quot;/apex/Apttus__Wizard?wizardid=&quot; &amp;Id,&quot;Wizard&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This launches a Wizard runtime instance.</inlineHelpText>
        <label>Runtime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Wizard designs</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Wizard designs</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subtype__c</fullName>
        <description>This is a subtype of the recordtype.</description>
        <inlineHelpText>This is a subtype of the recordtype.</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <description>Version number (counter) of wizard design. This identifies the wizard design uniquely in the chronology of creation.</description>
        <displayFormat>{0000000}.{000}</displayFormat>
        <inlineHelpText>Version number (counter) of wizard design. This identifies the wizard design uniquely in the chronology of creation.</inlineHelpText>
        <label>Version</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepStartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first step of the wizard design used in all runtime instances</description>
        <inlineHelpText>The first step of the wizard design used in all runtime instances</inlineHelpText>
        <label>Wizard Start Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Wizards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Design (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Description__c</columns>
        <columns>Apttus__Keywords__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Apttus__Runtime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>